--- a/index.html
+++ b/index.html
@@ -292,8 +292,8 @@
     <div class="video-overlay" id="videoOverlay">
         <div class="video-container">
             <button class="close-video" onclick="closeVideo()">×</button>
-            <video id="planeVideo" controls>
-                <source src="./veer video.mp4" type="video/mp4">
+            <video id="planeVideo" controls crossorigin="anonymous">
+                <source src="https://drive.google.com/uc?export=download&id=1TXEJObwQ3G4QmKe9aK1KHhc3fujjwiyb" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </div>
